// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OAuthRehydration Snapshots renders matching snapshot for default OAuth rehydration 1`] = `
<RCTSafeAreaView
  style={
    {
      "flexBasis": "0%",
      "flexGrow": 1,
      "flexShrink": 1,
      "paddingTop": 0,
    }
  }
>
  <RCTScrollView
    automaticallyAdjustContentInsets={false}
    contentContainerStyle={
      {
        "flexBasis": "0%",
        "flexGrow": 1,
        "flexShrink": 1,
      }
    }
    contentInset={
      {
        "bottom": 0,
      }
    }
    enableAutomaticScroll={true}
    enableOnAndroid={false}
    enableResetScrollToCoords={false}
    extraHeight={75}
    extraScrollHeight={0}
    getScrollResponder={[Function]}
    handleOnScroll={[Function]}
    keyboardDismissMode="interactive"
    keyboardOpeningTime={250}
    keyboardShouldPersistTaps="handled"
    keyboardSpace={0}
    onScroll={[Function]}
    resetKeyboardSpace={[Function]}
    resetScrollToCoords={
      {
        "x": 0,
        "y": 0,
      }
    }
    scrollEventThrottle={1}
    scrollForExtraHeightOnAndroid={[Function]}
    scrollIntoView={[Function]}
    scrollToEnd={[Function]}
    scrollToFocusedInput={[Function]}
    scrollToPosition={[Function]}
    showsVerticalScrollIndicator={true}
    style={
      {
        "flexBasis": "0%",
        "flexGrow": 1,
        "flexShrink": 1,
      }
    }
    update={[Function]}
    viewIsInsideTabBar={false}
  >
    <View>
      <View
        style={
          [
            {
              "display": "flex",
            },
            {
              "alignItems": "center",
              "flexBasis": "0%",
              "flexGrow": 1,
              "flexShrink": 1,
              "justifyContent": "flex-start",
              "paddingLeft": 24,
              "paddingRight": 24,
              "width": "100%",
            },
          ]
        }
        testID="login"
      >
        <View
          style={
            [
              {
                "display": "flex",
              },
              {
                "alignItems": "center",
                "marginTop": 10,
                "width": "100%",
              },
            ]
          }
        >
          <Image
            resizeMethod="auto"
            resizeMode="contain"
            source="metamask-name"
            style={
              {
                "alignSelf": "center",
                "height": 40,
                "marginTop": 10,
                "tintColor": "#131416",
                "width": 80,
              }
            }
          />
          <View
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "alignItems": "center",
                  "alignSelf": "flex-start",
                  "backgroundColor": "#b4b4b528",
                  "borderRadius": 12,
                  "columnGap": 8,
                  "flexDirection": "row",
                  "height": 48,
                  "justifyContent": "center",
                  "minWidth": 80,
                  "opacity": 1,
                  "overflow": "hidden",
                  "paddingLeft": 16,
                  "paddingRight": 16,
                },
                {
                  "alignSelf": "center",
                  "backgroundColor": "transparent",
                  "borderRadius": 0,
                  "height": 175,
                  "justifyContent": "center",
                  "marginTop": 48,
                  "minWidth": 0,
                  "paddingLeft": 0,
                  "paddingRight": 0,
                  "width": 175,
                },
                {
                  "transform": [
                    {
                      "scale": 1,
                    },
                  ],
                },
              ]
            }
          >
            <View
              style={{}}
            >
              <Image
                resizeMethod="auto"
                source="metamask-name"
                style={
                  {
                    "alignSelf": "center",
                    "height": 175,
                    "width": 175,
                  }
                }
              />
            </View>
          </View>
          <Text
            accessibilityRole="text"
            style={
              [
                {
                  "color": "#131416",
                  "fontFamily": "Geist-Bold",
                  "fontSize": 32,
                  "fontWeight": 700,
                  "letterSpacing": 0,
                  "lineHeight": 40,
                },
                {
                  "marginVertical": 24,
                  "textAlign": "center",
                },
              ]
            }
            testID="login-title"
          >
            Welcome back!
          </Text>
          <View
            style={
              [
                {
                  "display": "flex",
                },
                {
                  "flexDirection": "column",
                  "justifyContent": "flex-start",
                  "rowGap": 8,
                  "width": "100%",
                },
              ]
            }
          >
            <Text
              accessibilityRole="text"
              style={
                [
                  {
                    "color": "#131416",
                    "fontFamily": "Geist-Medium",
                    "fontSize": 16,
                    "fontWeight": 400,
                    "letterSpacing": 0,
                    "lineHeight": 24,
                  },
                  {
                    "marginBottom": -4,
                  },
                ]
              }
            >
              Password
            </Text>
            <View
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "alignItems": "center",
                  "backgroundColor": "#b4b4b528",
                  "borderColor": "#b4b4b566",
                  "borderRadius": 12,
                  "borderWidth": 1,
                  "flexDirection": "row",
                  "height": 48,
                  "opacity": 1,
                  "paddingHorizontal": 16,
                }
              }
              testID="textfield"
            >
              <View
                style={
                  {
                    "flex": 1,
                  }
                }
              >
                <TextInput
                  autoCapitalize="none"
                  autoFocus={false}
                  editable={true}
                  keyboardAppearance="light"
                  multiline={false}
                  numberOfLines={1}
                  onBlur={[Function]}
                  onChangeText={[Function]}
                  onFocus={[Function]}
                  onSubmitEditing={[Function]}
                  placeholder="Enter password"
                  placeholderTextColor="#66676a"
                  returnKeyType="done"
                  secureTextEntry={true}
                  style={
                    {
                      "backgroundColor": "inherit",
                      "borderColor": "transparent",
                      "borderWidth": 1,
                      "color": "#131416",
                      "fontFamily": "Geist-Regular",
                      "fontSize": 16,
                      "fontWeight": "400",
                      "height": 46,
                      "letterSpacing": 0,
                      "lineHeight": 0,
                      "opacity": 1,
                    }
                  }
                  testID="login-password-input"
                  value=""
                />
              </View>
            </View>
          </View>
          <View
            style={
              [
                {
                  "display": "flex",
                },
                {
                  "alignItems": "flex-start",
                  "alignSelf": "flex-start",
                  "flexDirection": "row",
                  "justifyContent": "flex-start",
                  "rowGap": 2,
                },
              ]
            }
          />
          <View
            style={
              [
                {
                  "display": "flex",
                },
                {
                  "alignItems": "center",
                  "flexDirection": "column",
                  "gap": 0,
                  "marginTop": 16,
                  "width": "100%",
                },
              ]
            }
          >
            <View
              accessibilityLabel="Unlock"
              accessibilityRole="button"
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": true,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                [
                  {
                    "alignItems": "center",
                    "backgroundColor": "#131416",
                    "borderRadius": 12,
                    "columnGap": 8,
                    "flexDirection": "row",
                    "height": 48,
                    "justifyContent": "center",
                    "minWidth": 80,
                    "opacity": 0.5,
                    "overflow": "hidden",
                    "paddingLeft": 16,
                    "paddingRight": 16,
                    "width": "100%",
                  },
                  {
                    "transform": [
                      {
                        "scale": 1,
                      },
                    ],
                  },
                ]
              }
              testID="log-in-button"
            >
              <Text
                accessibilityRole="text"
                ellipsizeMode="clip"
                numberOfLines={1}
                style={
                  [
                    {
                      "color": "#ffffff",
                      "flexGrow": 0,
                      "flexShrink": 1,
                      "flexWrap": "wrap",
                      "fontFamily": "Geist-Medium",
                      "fontSize": 16,
                      "fontWeight": 400,
                      "letterSpacing": 0,
                      "lineHeight": 24,
                      "textAlign": "center",
                    },
                    undefined,
                  ]
                }
              >
                Unlock
              </Text>
            </View>
          </View>
          <View
            style={
              [
                {
                  "display": "flex",
                },
                {
                  "alignItems": "center",
                  "marginTop": 32,
                },
              ]
            }
          >
            <Text
              accessibilityRole="text"
              style={
                [
                  {
                    "color": "#131416",
                    "fontFamily": "Geist-Regular",
                    "fontSize": 16,
                    "fontWeight": 400,
                    "letterSpacing": 0,
                    "lineHeight": 24,
                  },
                  undefined,
                ]
              }
            >
              <View
                accessibilityRole="button"
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": undefined,
                    "disabled": false,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  [
                    {
                      "transform": [
                        {
                          "translateY": 4,
                        },
                      ],
                    },
                    {
                      "alignItems": "center",
                      "backgroundColor": "transparent",
                      "flexDirection": "row",
                      "opacity": 1,
                    },
                    undefined,
                  ]
                }
                testID="other-methods-button"
              >
                <Text
                  accessibilityRole="text"
                  style={
                    [
                      {
                        "color": "#4459ff",
                        "fontFamily": "Geist-Medium",
                        "fontSize": 16,
                        "fontWeight": 400,
                        "letterSpacing": 0,
                        "lineHeight": 24,
                        "textDecorationLine": "none",
                      },
                      undefined,
                    ]
                  }
                >
                  Use a different login method
                </Text>
              </View>
            </Text>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
  <View
    collapsable={false}
    style={
      {
        "backgroundColor": "#ffffff",
        "bottom": 0,
        "left": 0,
        "opacity": 1,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  />
</RCTSafeAreaView>
`;

exports[`OAuthRehydration Snapshots renders matching snapshot for outdated seedless password 1`] = `
<RCTSafeAreaView
  style={
    {
      "flexBasis": "0%",
      "flexGrow": 1,
      "flexShrink": 1,
      "paddingTop": 0,
    }
  }
>
  <RCTScrollView
    automaticallyAdjustContentInsets={false}
    contentContainerStyle={
      {
        "flexBasis": "0%",
        "flexGrow": 1,
        "flexShrink": 1,
      }
    }
    contentInset={
      {
        "bottom": 0,
      }
    }
    enableAutomaticScroll={true}
    enableOnAndroid={false}
    enableResetScrollToCoords={false}
    extraHeight={75}
    extraScrollHeight={0}
    getScrollResponder={[Function]}
    handleOnScroll={[Function]}
    keyboardDismissMode="interactive"
    keyboardOpeningTime={250}
    keyboardShouldPersistTaps="handled"
    keyboardSpace={0}
    onScroll={[Function]}
    resetKeyboardSpace={[Function]}
    resetScrollToCoords={
      {
        "x": 0,
        "y": 0,
      }
    }
    scrollEventThrottle={1}
    scrollForExtraHeightOnAndroid={[Function]}
    scrollIntoView={[Function]}
    scrollToEnd={[Function]}
    scrollToFocusedInput={[Function]}
    scrollToPosition={[Function]}
    showsVerticalScrollIndicator={true}
    style={
      {
        "flexBasis": "0%",
        "flexGrow": 1,
        "flexShrink": 1,
      }
    }
    update={[Function]}
    viewIsInsideTabBar={false}
  >
    <View>
      <View
        style={
          [
            {
              "display": "flex",
            },
            {
              "alignItems": "center",
              "flexBasis": "0%",
              "flexGrow": 1,
              "flexShrink": 1,
              "justifyContent": "flex-start",
              "paddingLeft": 24,
              "paddingRight": 24,
              "width": "100%",
            },
          ]
        }
        testID="login"
      >
        <View
          style={
            [
              {
                "display": "flex",
              },
              {
                "alignItems": "center",
                "marginTop": 10,
                "width": "100%",
              },
            ]
          }
        >
          <Image
            resizeMethod="auto"
            resizeMode="contain"
            source="metamask-name"
            style={
              {
                "alignSelf": "center",
                "height": 40,
                "marginTop": 10,
                "tintColor": "#131416",
                "width": 80,
              }
            }
          />
          <View
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "alignItems": "center",
                  "alignSelf": "flex-start",
                  "backgroundColor": "#b4b4b528",
                  "borderRadius": 12,
                  "columnGap": 8,
                  "flexDirection": "row",
                  "height": 48,
                  "justifyContent": "center",
                  "minWidth": 80,
                  "opacity": 1,
                  "overflow": "hidden",
                  "paddingLeft": 16,
                  "paddingRight": 16,
                },
                {
                  "alignSelf": "center",
                  "backgroundColor": "transparent",
                  "borderRadius": 0,
                  "height": 175,
                  "justifyContent": "center",
                  "marginTop": 48,
                  "minWidth": 0,
                  "paddingLeft": 0,
                  "paddingRight": 0,
                  "width": 175,
                },
                {
                  "transform": [
                    {
                      "scale": 1,
                    },
                  ],
                },
              ]
            }
          >
            <View
              style={{}}
            >
              <Image
                resizeMethod="auto"
                source="metamask-name"
                style={
                  {
                    "alignSelf": "center",
                    "height": 175,
                    "width": 175,
                  }
                }
              />
            </View>
          </View>
          <Text
            accessibilityRole="text"
            style={
              [
                {
                  "color": "#131416",
                  "fontFamily": "Geist-Bold",
                  "fontSize": 32,
                  "fontWeight": 700,
                  "letterSpacing": 0,
                  "lineHeight": 40,
                },
                {
                  "marginVertical": 24,
                  "textAlign": "center",
                },
              ]
            }
            testID="login-title"
          >
            Welcome back!
          </Text>
          <View
            style={
              [
                {
                  "display": "flex",
                },
                {
                  "flexDirection": "column",
                  "justifyContent": "flex-start",
                  "rowGap": 8,
                  "width": "100%",
                },
              ]
            }
          >
            <Text
              accessibilityRole="text"
              style={
                [
                  {
                    "color": "#131416",
                    "fontFamily": "Geist-Medium",
                    "fontSize": 16,
                    "fontWeight": 400,
                    "letterSpacing": 0,
                    "lineHeight": 24,
                  },
                  {
                    "marginBottom": -4,
                  },
                ]
              }
            >
              Password
            </Text>
            <View
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "alignItems": "center",
                  "backgroundColor": "#b4b4b528",
                  "borderColor": "#ca3542",
                  "borderRadius": 12,
                  "borderWidth": 1,
                  "flexDirection": "row",
                  "height": 48,
                  "opacity": 1,
                  "paddingHorizontal": 16,
                }
              }
              testID="textfield"
            >
              <View
                style={
                  {
                    "flex": 1,
                  }
                }
              >
                <TextInput
                  autoCapitalize="none"
                  autoFocus={false}
                  editable={true}
                  keyboardAppearance="light"
                  multiline={false}
                  numberOfLines={1}
                  onBlur={[Function]}
                  onChangeText={[Function]}
                  onFocus={[Function]}
                  onSubmitEditing={[Function]}
                  placeholder="Enter password"
                  placeholderTextColor="#66676a"
                  returnKeyType="done"
                  secureTextEntry={true}
                  style={
                    {
                      "backgroundColor": "inherit",
                      "borderColor": "transparent",
                      "borderWidth": 1,
                      "color": "#131416",
                      "fontFamily": "Geist-Regular",
                      "fontSize": 16,
                      "fontWeight": "400",
                      "height": 46,
                      "letterSpacing": 0,
                      "lineHeight": 0,
                      "opacity": 1,
                    }
                  }
                  testID="login-password-input"
                  value=""
                />
              </View>
            </View>
          </View>
          <View
            style={
              [
                {
                  "display": "flex",
                },
                {
                  "alignItems": "flex-start",
                  "alignSelf": "flex-start",
                  "flexDirection": "row",
                  "justifyContent": "flex-start",
                  "rowGap": 2,
                },
              ]
            }
          >
            <Text
              accessibilityRole="text"
              style={
                {
                  "color": "#ca3542",
                  "fontFamily": "Geist-Regular",
                  "fontSize": 14,
                  "letterSpacing": 0,
                  "lineHeight": 22,
                }
              }
              testID="invalid-password-error"
            >
              Your password was changed recently.
            </Text>
          </View>
          <View
            style={
              [
                {
                  "display": "flex",
                },
                {
                  "alignItems": "center",
                  "flexDirection": "column",
                  "gap": 0,
                  "marginTop": 16,
                  "width": "100%",
                },
              ]
            }
          >
            <View
              accessibilityLabel="Unlock"
              accessibilityRole="button"
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": true,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                [
                  {
                    "alignItems": "center",
                    "backgroundColor": "#131416",
                    "borderRadius": 12,
                    "columnGap": 8,
                    "flexDirection": "row",
                    "height": 48,
                    "justifyContent": "center",
                    "minWidth": 80,
                    "opacity": 0.5,
                    "overflow": "hidden",
                    "paddingLeft": 16,
                    "paddingRight": 16,
                    "width": "100%",
                  },
                  {
                    "transform": [
                      {
                        "scale": 1,
                      },
                    ],
                  },
                ]
              }
              testID="log-in-button"
            >
              <Text
                accessibilityRole="text"
                ellipsizeMode="clip"
                numberOfLines={1}
                style={
                  [
                    {
                      "color": "#ffffff",
                      "flexGrow": 0,
                      "flexShrink": 1,
                      "flexWrap": "wrap",
                      "fontFamily": "Geist-Medium",
                      "fontSize": 16,
                      "fontWeight": 400,
                      "letterSpacing": 0,
                      "lineHeight": 24,
                      "textAlign": "center",
                    },
                    undefined,
                  ]
                }
              >
                Unlock
              </Text>
            </View>
          </View>
          <Text
            accessibilityRole="text"
            style={
              [
                {
                  "color": "#131416",
                  "fontFamily": "Geist-Regular",
                  "fontSize": 16,
                  "fontWeight": 400,
                  "letterSpacing": 0,
                  "lineHeight": 24,
                },
                undefined,
              ]
            }
          >
            <View
              accessibilityRole="link"
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": false,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                [
                  {
                    "transform": [
                      {
                        "translateY": 4,
                      },
                    ],
                  },
                  {
                    "alignItems": "center",
                    "backgroundColor": "transparent",
                    "flexDirection": "row",
                    "opacity": 1,
                  },
                  {
                    "alignSelf": "center",
                    "marginVertical": 14,
                  },
                ]
              }
              testID="reset-wallet-button"
            >
              <Text
                accessibilityRole="text"
                style={
                  [
                    {
                      "color": "#66676a",
                      "fontFamily": "Geist-Medium",
                      "fontSize": 16,
                      "fontWeight": 400,
                      "letterSpacing": 0,
                      "lineHeight": 24,
                      "textDecorationLine": "none",
                    },
                    undefined,
                  ]
                }
              >
                Forgot password?
              </Text>
            </View>
          </Text>
        </View>
      </View>
    </View>
  </RCTScrollView>
  <View
    collapsable={false}
    style={
      {
        "backgroundColor": "#ffffff",
        "bottom": 0,
        "left": 0,
        "opacity": 1,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  />
</RCTSafeAreaView>
`;
